fix(plugins/plugin-client-common): block left-border is not centered with In[1] text in minisplits
Fixes #5585

--- a/plugins/plugin-client-common/web/scss/components/Terminal/MiniSplit.scss
+++ b/plugins/plugin-client-common/web/scss/components/Terminal/MiniSplit.scss
@@ -45,7 +45,6 @@
 
   .repl-block {
     margin: 0;
-    padding-bottom: 0;
   }
 
   .repl-prompt {
